tests/v0-fail/ignore.out
Running <root>/ignore.cli ...

printf "hello\nworld\n"
---
hello
world
---
ERROR: pattern literal at line <root>/ignore.cli:7 does not match output line "world"
matching Sequence([Literal(goodbye), End])
  matching Literal(goodbye)
  -matching Literal(hello)
  -literal match: "hello" == "hello"
  -matching Literal(hello)
  -literal FAILED match: "world" == "hello"
  literal FAILED match: "world" == "goodbye"

❌ FAIL

<root>/ignore.cli FAILED
Error: pattern literal at line <root>/ignore.cli:7 does not match output line "world"

